[gd_scene load_steps=6 format=3 uid="uid://dbi6k0n62i4ih"]

[ext_resource type="Script" path="res://blobton.gd" id="1_s5w61"]
[ext_resource type="Texture2D" uid="uid://biu8tc75hfidh" path="res://tilemap-characters.png" id="2_nxb1t"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_435tl"]
size = Vector2(11.0223, 8.97874)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u2c26"]
size = Vector2(50.8676, 9.00428)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lwp03"]
size = Vector2(12.967, 10.9773)

[node name="blobton" type="CharacterBody2D"]
scale = Vector2(3, 3)
collision_layer = 0
collision_mask = 14
script = ExtResource("1_s5w61")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.00447083, -6.50367)
shape = SubResource("RectangleShape2D_435tl")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-19.9236, -6.49615)
shape = SubResource("RectangleShape2D_u2c26")

[node name="damagearea" type="Area2D" parent="."]
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="damagearea"]
position = Vector2(0.00752401, -6.50158)
shape = SubResource("RectangleShape2D_lwp03")

[node name="raycast_floor" type="RayCast2D" parent="."]
position = Vector2(-6.33333, -6.34738)
scale = Vector2(1, 0.2)
collision_mask = 4

[node name="Tilemap-characters" type="Sprite2D" parent="."]
position = Vector2(7.10543e-15, -6.66667)
scale = Vector2(0.6, 0.55)
texture = ExtResource("2_nxb1t")
region_enabled = true
region_rect = Rect2(150.728, 51.4312, 21.8911, 20.5398)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="area_entered" from="damagearea" to="." method="_on_damagearea_area_entered"]
[connection signal="body_entered" from="damagearea" to="." method="_on_damagearea_body_entered"]
[connection signal="body_exited" from="damagearea" to="." method="_on_damagearea_body_exited"]
